# ResearchPaperSimulationQt

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/simulation_engine/: point.hpp  simulation_engine.cpp  simulation_engine.hpp
frontend/: CMakeLists.txt
frontend/main_window/: main_window.cpp  main_window.h  main_window.ui
frontend/simulation_widget/: simulation_widget.cpp  simulation_widget.h  simulation_widget.ui
